# pyticktick

./: .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  404.html  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  feature.yaml  question.yaml
.github/workflows/: auto_assign_issue.yaml  checks.yaml  docs.yaml  integration_monitoring.yaml  integration_monitoring_template.md  publish.yaml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  index.md
docs/explanations/: code_conventions.md  comparison_of_similar_libraries.md  forbidding_extra_fields_in_api_models.md
docs/explanations/ticktick_api/: checklists_vs_subtasks.md  kinds_of_tasks.md  two_apis.md
docs/guides/: installation.md
docs/guides/cookbook/project_groups/: add_a_new_project_to_a_project_group.md  add_an_existing_project_to_a_project_group.md  create_a_project_group.md  delete_a_project_group.md  get_a_project_group_by_id.md  get_a_project_group_by_name.md  get_all_project_groups.md  remove_a_project_from_a_project_group.md  update_a_project_group.md
docs/guides/cookbook/projects/: create_a_project.md  delete_a_project.md  get_a_project_by_id.md  get_a_project_by_name.md  get_all_projects.md  update_a_project.md
docs/guides/cookbook/settings/: authenticate_client_via_dotenv.md  authenticate_client_via_env_vars.md  authenticate_client_via_python.md  authenticate_client_with_2fa.md  set_v1_authentication_parameters.md  set_v1_secrets.md  (+2 more)
docs/guides/development/: release_process.md  running_tests_locally.md  running_the_documentation_server_locally.md  setup_local_environment.md
docs/guides/settings/: overriding_models_that_forbid_extra_fields.md  overriding_outdated_headers.md
docs/guides/ticktick_api/: generate_v1_token.md  register_v1_app.md
docs/reference/: logger.md  pydantic.md  retry.md  settings.md
docs/reference/client/: v1.md  v2.md
docs/reference/models/: pydantic.md
explanations/code_conventions/: index.html
explanations/comparison_of_similar_libraries/: index.html
explanations/forbidding_extra_fields_in_api_models/: index.html
explanations/ticktick_api/checklists_vs_subtasks/: index.html
explanations/ticktick_api/kinds_of_tasks/: index.html
explanations/ticktick_api/two_apis/: index.html
guides/development/release_process/: index.html
guides/development/running_tests_locally/: index.html
guides/development/running_the_documentation_server_locally/: index.html
guides/development/setup_local_environment/: index.html
guides/installation/: index.html
guides/settings/overriding_models_that_forbid_extra_fields/: index.html
guides/settings/overriding_outdated_headers/: index.html
guides/ticktick_api/generate_v1_token/: index.html
guides/ticktick_api/register_v1_app/: index.html
reference/client/v1/: index.html
reference/client/v2/: index.html
reference/logger/: index.html
reference/models/pydantic/: index.html
reference/pydantic/: index.html
reference/retry/: index.html
reference/settings/: index.html
scripts/: clear_all_objects.py  generate_v1_token.py  pypi_version_check.py
scripts/checks/: changelog.py  pypi_version.py
search/: search_index.json
src/pyticktick/: __init__.py  client.py  logger.py  pydantic.py  retry.py  settings.py
src/pyticktick/models/: __init__.py  pydantic.py
tests/: conftest.py
tests/integration/: conftest.py  test_integration_settings.py
tests/integration/v1/: conftest.py  test_v1_client_project_functions.py  test_v1_client_task_functions.py
tests/integration/v2/: conftest.py  test_batch.py  test_closed.py  test_project.py  test_project_group.py  test_tag.py  test_task.py  test_task_parent.py  test_user.py
tests/unit/: conftest.py  test_client.py  test_color.py  test_http_url.py  test_logger.py  test_pydantic.py  test_pydantic_types.py  test_retry.py  test_settings.py
tests/unit/v1/: test_parameters.py
tests/unit/v2/: test_v2_models.py
(+112 files in other folders)
