
[project]
name = "pyticktick"
version = "0.2.0"
description = "The modern library to interact with the TickTick API."
authors = [{ name = "Seb Pretzer", email = "quick.creek3304@fastmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=5.0.0",
    "httpx>=0.25.0",
    "icalendar>=6.1.2",
    "loguru>=0.7.0",
    "pydantic-extra-types>=2.2.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pymongo>=4.0.0",
    "pyotp>=2.9.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest >=7.0.0",
    "pyperclip>=1.8.0",
    "pre-commit>=4.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "mkdocstrings[python]>=0.28.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "griffe-pydantic>=1.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.3.0",
    "ruff>=0.11.2",
    "mkdocs-autorefs>=1.4.1",
    "pydantic-2-mermaid>=0.7.3",
    "eval-type-backport>=0.2.2",
]
mypy = [
    "mypy>=1.15.0",
    "types-icalendar>=6.1.3.20250403",
    "types-python-dateutil>=2.9.0.20241206",
]

[project.urls]
Homepage = "https://pyticktick.pretzer.io/"
Changelog = "https://pyticktick.pretzer.io/CHANGELOG"
Repository = "https://github.com/sebpretzer/pyticktick"
Issues = "https://github.com/sebpretzer/pyticktick/issues"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = "all"
preview = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["UP007"] # Remove this after dropping Python 3.9 support
preview = true
explicit-preview-rules = true
extend-select = [
    # "DOC101", # https://github.com/astral-sh/ruff/pull/13280
    # "DOC102",
    "DOC201",
    "DOC202",
    "DOC402",
    "DOC403",
    "DOC501",
    "DOC502",
]
external = ["DOC"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "pyticktick.models.v2.models.BaseModelV2",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
"src/pyticktick/models/*" = ["ANN401", "E501"]
"tests/*" = ["ANN", "D", "INP", "C901", "PLR0913", "PLR2004", "S101", "SLF001"]

# Remove this after rules are added to ruff
# https://github.com/astral-sh/ruff/issues/12434
[tool.flake8]
style = "google"
exclude = "tests/"
select = ["DOC", "PYD"]
ignore = [ # all obsoleted by ruff
    "DOC105",
    "DOC201",
    "DOC202",
    "DOC203",
    "DOC402",
    "DOC403",
    "DOC501",
    "DOC502",
]
per-file-ignores = ["src/pyticktick/models/*:DOC601,DOC603"]
ignore-private-args = true
skip-checking-short-docstrings = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

# Switch all rules to `strict = false` after
# https://github.com/python/mypy/issues/11401
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_unused_ignores = false
warn_return_any = false
no_implicit_reexport = false
strict_equality = false
extra_checks = false

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.typos.default]
extend-ignore-words-re = ["ba", "ser_*", "extenal_*", "Fo"]
